welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:6: error: ')' expected but ';' found.
    setPos(col-lign;lign)
                   ^Diagonal:6: error: ';' expected but ')' found.
    setPos(col-lign;lign)
                        ^